--- a/client/src/components/UI/button/CustomButton.module.css
+++ b/client/src/components/UI/button/CustomButton.module.css
@@ -1,12 +1,12 @@
-.customButton {
+.custom_button {
     padding: 5px;
-    margin: 5px;
+    margin: 10px;
     background: transparent;
     border: 1px solid rgba(0, 0, 0, 0.2);
     cursor: pointer;
 }
 
-.customButton:hover {
+.custom_button:hover {
     background-color: rgb(242, 240, 237);
     outline: 1px solid rgba(0, 0, 0, 0.2);
 }
