--- a/client/src/components/UI/input/Input.module.css
+++ b/client/src/components/UI/input/Input.module.css
@@ -1,10 +1,10 @@
-.customInput {
+.custom_input {
     padding: 5px;
-    margin: 5px;
+    margin: 10px;
     background: transparent;
     border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.customInput:focus {
+.custom_input:focus {
     outline: 1px solid rgba(0, 0, 0, 0.2);
 }
