The following changes were made: 1. LoginForm was added 2. Routes was moved to the routes.js

--- a/client/src/components/UI/input/CustomInput.module.css
+++ b/client/src/components/UI/input/CustomInput.module.css
@@ -3,8 +3,9 @@
     margin: 10px;
     background: transparent;
     border: 1px solid rgba(0, 0, 0, 0.2);
+    width: 100%;
 }
 
-.custom_input:focus {
+.custom_input:focus, .custom_input:hover {
     outline: 1px solid rgba(0, 0, 0, 0.2);
 }
